--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   <script src=src/data/exampleVideoData.js></script>
 </head>
 <body>
-  <app ng-app="video-player">
+  <app ng-app="video-player" you-tube='youTube'>
     <h5><br/><br/>this message will disappear when <em>app</em> component is correctly rendered<br/><br/><br/></h5>
   </app>
   <script src="src/index.js"></script>
+  <script src="src/config/youtube.js"></script>
   <script src="src/services/youTube.js"></script>
+ 
   <script src="src/components/app.js"></script>
   <script src="src/components/videoPlayer.js"></script>
   <script src="src/components/search.js"></script>
